[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/MenuScripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://FX/Shader.tscn" type="PackedScene" id=2]
[ext_resource path="res://texture_ui/menu/background_menu.png" type="Texture" id=3]
[ext_resource path="res://texture_ui/menu/cina_button.png" type="Texture" id=4]
[ext_resource path="res://fonts/AndroidAssassin-WXXY.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://texture_ui/menu/coin.png" type="Texture" id=6]
[ext_resource path="res://texture_ui/menu/ball.png" type="Texture" id=7]
[ext_resource path="res://scripts/LabelCoin.gd" type="Script" id=8]
[ext_resource path="res://texture_ui/menu/start_button.png" type="Texture" id=9]
[ext_resource path="res://texture_ui/menu/shop_button.png" type="Texture" id=10]
[ext_resource path="res://texture_ui/menu/exit_button.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("coin_icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 0.999999, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -456.008, -76.462 ), Vector2( -456.008, 55.178 ), Vector2( -456.008, 16.958 ), Vector2( -456.008, 28.968 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LabelCoin:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -395.1, -104.03 ), Vector2( -395.1, 26.79 ), Vector2( -395.1, -8.4 ), Vector2( -395.1, -2.37 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rocket_icon:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -417.268, 540 ), Vector2( -417.268, 20 ), Vector2( -417.268, 100.07 ), Vector2( -417.268, 40 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "RocketShake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Rocket_icon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -417.268, 520 ), Vector2( -417.268, 43.78 ), Vector2( -417.268, 130.49 ), Vector2( -417.268, 45.94 ), Vector2( -417.268, 63.43 ), Vector2( -417.268, 42.41 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Buttons:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1100, 236 ), Vector2( 588, 236 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Shader" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WorldEnvironment" parent="Shader" instance=ExtResource( 2 )]

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.10803
margin_right = -1.10803
texture = ExtResource( 3 )
expand = true

[node name="Elements" type="TextureRect" parent="."]
margin_left = 509.381
margin_top = 26.9734
margin_right = 927.381
margin_bottom = 173.973
expand = true

[node name="BackForLabel" type="Sprite" parent="Elements"]
position = Vector2( 170.111, 73.28 )
scale = Vector2( 1.24542, 1.09997 )
texture = ExtResource( 4 )

[node name="WelcomeLabel" type="Label" parent="Elements"]
margin_left = 4.17217
margin_top = 41.15
margin_right = 335.172
margin_bottom = 103.15
custom_fonts/font = SubResource( 1 )
text = "Iok Jump"
align = 1
valign = 1

[node name="coin_icon" type="Sprite" parent="Elements"]
position = Vector2( -456.008, 55.178 )
scale = Vector2( 1.71697, 1.71697 )
texture = ExtResource( 6 )

[node name="Rocket_icon" type="TextureButton" parent="Elements"]
margin_left = -417.268
margin_top = 42.41
margin_right = -27.268
margin_bottom = 615.41
rect_pivot_offset = Vector2( 500, 0 )
texture_normal = ExtResource( 7 )
expand = true

[node name="LabelCoin" type="Label" parent="Elements"]
margin_left = -395.1
margin_top = 26.79
margin_right = -355.1
margin_bottom = 78.79
custom_fonts/font = SubResource( 2 )
text = "0"
script = ExtResource( 8 )

[node name="AnimationElements" type="AnimationPlayer" parent="Elements"]
autoplay = "AnimatonElements"
anims/AnimatonElements = SubResource( 3 )
anims/RocketShake = SubResource( 4 )

[node name="Buttons" type="CenterContainer" parent="."]
margin_left = 588.0
margin_top = 236.0
margin_right = 818.0
margin_bottom = 544.0

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
margin_right = 230.0
margin_bottom = 308.0

[node name="Play" type="TextureButton" parent="Buttons/VBoxContainer"]
margin_right = 230.0
margin_bottom = 100.0
texture_normal = ExtResource( 9 )

[node name="Shop" type="TextureButton" parent="Buttons/VBoxContainer"]
margin_top = 104.0
margin_right = 230.0
margin_bottom = 204.0
texture_normal = ExtResource( 10 )

[node name="Exit" type="TextureButton" parent="Buttons/VBoxContainer"]
margin_top = 208.0
margin_right = 230.0
margin_bottom = 308.0
texture_normal = ExtResource( 11 )

[node name="TransitionElements" type="AnimationPlayer" parent="."]
autoplay = "AnimtionElements"
anims/AnimtionElements = SubResource( 5 )
[connection signal="pressed" from="Elements/Rocket_icon" to="." method="_on_Rocket_icon_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
