[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/MenuScripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://FX/Shader.tscn" type="PackedScene" id=2]
[ext_resource path="res://texture_ui/menu/background_menu.png" type="Texture" id=3]
[ext_resource path="res://texture_ui/menu/cina_button.png" type="Texture" id=4]
[ext_resource path="res://fonts/AndroidAssassin-WXXY.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://texture_ui/menu/coin.png" type="Texture" id=6]
[ext_resource path="res://texture_ui/menu/ball.png" type="Texture" id=7]
[ext_resource path="res://texture_ui/menu/home.png" type="Texture" id=8]
[ext_resource path="res://scripts/LabelCoin.gd" type="Script" id=9]
[ext_resource path="res://texture_ui/menu/start_button.png" type="Texture" id=10]
[ext_resource path="res://texture_ui/menu/shop_button.png" type="Texture" id=11]
[ext_resource path="res://texture_ui/menu/exit_button.png" type="Texture" id=12]
[ext_resource path="res://texture_ui/game/characters/character.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("coin_icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 0.999999, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -456.008, -76.462 ), Vector2( -456.008, 55.178 ), Vector2( -456.008, 16.958 ), Vector2( -456.008, 28.968 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rocket_icon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 5.09824, 1 ),
"update": 0,
"values": [ Vector2( -246.201, 325.93 ), Vector2( -550.35, -271.82 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HomeButton:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 420.803, -120.85 ), Vector2( 420.803, 2.73 ), Vector2( 420.803, -24.32 ), Vector2( 420.803, -11.12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LabelCoin:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -400, -102.04 ), Vector2( -400, 29.65 ), Vector2( -400, -10.99 ), Vector2( -400, 2.12 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Buttons:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 588, 236 ), Vector2( 1100, 236 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScrollContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 124.24, 620 ), Vector2( 124.24, 207.36 ) ]
}

[node name="ShopMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Shader" type="TextureRect" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WorldEnvironment" parent="Shader" instance=ExtResource( 2 )]

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Elements" type="TextureRect" parent="."]
margin_left = 504.47
margin_top = 26.9734
margin_right = 922.47
margin_bottom = 173.973
expand = true

[node name="BackForLabel" type="Sprite" parent="Elements"]
position = Vector2( 170.111, 73.28 )
scale = Vector2( 1.24542, 1.09997 )
texture = ExtResource( 4 )

[node name="WelcomeLabel" type="Label" parent="Elements"]
margin_left = 10.195
margin_top = 41.15
margin_right = 341.195
margin_bottom = 103.15
custom_fonts/font = SubResource( 1 )
text = "Shop"
align = 1
valign = 1

[node name="coin_icon" type="Sprite" parent="Elements"]
position = Vector2( -456.008, -76.462 )
scale = Vector2( 1.71697, 1.71697 )
texture = ExtResource( 6 )

[node name="Rocket_icon" type="Sprite" parent="Elements"]
position = Vector2( -246.201, 325.93 )
scale = Vector2( 0.722933, 0.722933 )
texture = ExtResource( 7 )

[node name="HomeButton" type="TextureButton" parent="Elements"]
margin_left = 420.803
margin_top = -120.85
margin_right = 505.803
margin_bottom = -37.85
texture_normal = ExtResource( 8 )
expand = true

[node name="LabelCoin" type="Label" parent="Elements"]
margin_left = -400.0
margin_top = -102.04
margin_right = -360.0
margin_bottom = -50.04
custom_fonts/font = SubResource( 2 )
script = ExtResource( 9 )

[node name="AnimationElements" type="AnimationPlayer" parent="Elements"]
autoplay = "AnimatonElements"
anims/AnimatonElements = SubResource( 3 )

[node name="Buttons" type="CenterContainer" parent="."]
editor/display_folded = true
margin_left = 1100.0
margin_top = 236.0
margin_right = 1330.0
margin_bottom = 544.0

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
editor/display_folded = true
margin_right = 230.0
margin_bottom = 308.0

[node name="Play" type="TextureButton" parent="Buttons/VBoxContainer"]
margin_right = 230.0
margin_bottom = 100.0
texture_normal = ExtResource( 10 )

[node name="Shop" type="TextureButton" parent="Buttons/VBoxContainer"]
margin_top = 104.0
margin_right = 230.0
margin_bottom = 204.0
texture_normal = ExtResource( 11 )

[node name="Exit" type="TextureButton" parent="Buttons/VBoxContainer"]
margin_top = 208.0
margin_right = 230.0
margin_bottom = 308.0
texture_normal = ExtResource( 12 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
editor/display_folded = true
margin_left = 124.0
margin_top = 207.0
margin_right = 889.0
margin_bottom = 601.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 100.0
margin_bottom = 428.0

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 140.0
texture_normal = ExtResource( 13 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureButton"]
margin_left = 149.784
margin_top = 2.45547
margin_right = 189.784
margin_bottom = 16.4555
custom_fonts/font = SubResource( 4 )
text = "Base Rocket "

[node name="TextureButton2" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 100.0
margin_bottom = 284.0
texture_normal = ExtResource( 13 )

[node name="TextureButton3" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 100.0
margin_bottom = 428.0
texture_normal = ExtResource( 13 )

[node name="TransitionElements" type="AnimationPlayer" parent="."]
autoplay = "Change"
anims/Change = SubResource( 5 )
[connection signal="pressed" from="Elements/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
